# sort-google-scholar

./: .bumpversion.cfg  .gitignore  Dockerfile  Example-Python27.ipynb  Example-Python3.ipynb  Example.ipynb  README.md  Test_sortgs_py_on_Colab.ipynb  conda_environment.yml  google_scholar_sort.py  pyproject.toml  requirements.txt  setup.py  sortby_citations_google_scholar.py  sortgs.py
.github/: FUNDING.yml
.github/workflows/: deploy-to-pypi.yml  docker.yml  test.yml
examples/: Sort_Google_Scholar_No_Code_Version.ipynb  deep_learning.csv  machine_learning.csv  neural_networks.csv  non_intrusive_load_monitoring.csv  run_sortgs_on_colab.ipynb  update_examples.py
sort-google-scholar-V1/: Example-Python3.ipynb  README.md
src/sortgs/: __init__.py  sortgs.py
test/: test_sortgs.py
tests/: test_sortgs.py
